syntax = "proto3";

package temporal.server.api.enums.v1;

option go_package = "go.temporal.io/server/api/enums/v1;enums";

enum WorkflowExecutionState {
    WORKFLOW_EXECUTION_STATE_UNSPECIFIED = 0;
    WORKFLOW_EXECUTION_STATE_CREATED = 1;
    WORKFLOW_EXECUTION_STATE_RUNNING = 2;
    WORKFLOW_EXECUTION_STATE_COMPLETED = 3;
    WORKFLOW_EXECUTION_STATE_ZOMBIE = 4;
    WORKFLOW_EXECUTION_STATE_VOID = 5;
    WORKFLOW_EXECUTION_STATE_CORRUPTED = 6;
}

enum WorkflowBackoffType {
    WORKFLOW_BACKOFF_TYPE_UNSPECIFIED = 0;
    WORKFLOW_BACKOFF_TYPE_RETRY = 1;
    WORKFLOW_BACKOFF_TYPE_CRON = 2;
    WORKFLOW_BACKOFF_TYPE_DELAY_START = 3;
}

enum PausedWorkflowEntityType {
    PAUSED_WORKFLOW_ENTITY_TYPE_UNSPECIFIED = 0;
    PAUSED_WORKFLOW_ENTITY_TYPE_ACTIVITY = 1;
    PAUSED_WORKFLOW_ENTITY_TYPE_WORKFLOW = 2;
}
